// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Index when Get Component service endpoint returns a component renders the page 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Response Times
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Visualizations
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/openapi-specs"
      target="_self"
    >
      
    OpenAPI
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/graphql-schemas"
      target="_self"
    >
      
    GraphQL
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/repo"
      target="_self"
    >
      Repo
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/readme"
      target="_self"
    >
      README
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/to-dos"
      target="_self"
    >
      To Dos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/software-repositories"
      target="_self"
    >
      
    Software Repositories
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/software"
      target="_self"
    >
      Software
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/imports"
      target="_self"
    >
      Imports
    </a>
  </div>
   
  <div>
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-info"
          role="alert"
        >
          <!---->
          
      No response times are available for this component. Possibly the
      component may not have been integrated with Zipkin yet.
    
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Component service endpoint returns a component when Get Summary service endpoint returns a summary with sub component dependencies when the sub component dependencies are for a different component renders no response times 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 3 - Response Times
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/dependencies"
      target="_self"
    >
      
    Visualizations
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/openapi-specs"
      target="_self"
    >
      
    OpenAPI
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/graphql-schemas"
      target="_self"
    >
      
    GraphQL
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/repo"
      target="_self"
    >
      Repo
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/readme"
      target="_self"
    >
      README
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/to-dos"
      target="_self"
    >
      To Dos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/software-repositories"
      target="_self"
    >
      
    Software Repositories
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/software"
      target="_self"
    >
      Software
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-3/imports"
      target="_self"
    >
      Imports
    </a>
  </div>
   
  <div>
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-info"
          role="alert"
        >
          <!---->
          
      No response times are available for this component. Possibly the
      component may not have been integrated with Zipkin yet.
    
        </div>
      </transition-stub>
    </div>
  </div>
</div>
`;

exports[`Index when Get Component service endpoint returns a component when Get Summary service endpoint returns a summary with sub component dependencies when the sub component dependencies are for the same component renders the response times 1`] = `
<div
  class="m-3"
>
  <h1
    class="text-info my-3"
  >
    Test Component Name 1 - Response Times
  </h1>
   
  <div
    class="my-3"
  >
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1"
      target="_self"
    >
      Info
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/dependencies"
      target="_self"
    >
      
    Visualizations
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/response-times"
      target="_self"
    >
      
    Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/downstream-response-times"
      target="_self"
    >
      
    Downstream Response Times
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/call-graphs"
      target="_self"
    >
      
    Call Graphs
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/cross-functional-requirements"
      target="_self"
    >
      
    Cross Functional Requirements
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tech-debts"
      target="_self"
    >
      
    Tech Debts
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/tests"
      target="_self"
    >
      Tests
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/errors"
      target="_self"
    >
      Errors
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/openapi-specs"
      target="_self"
    >
      
    OpenAPI
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/graphql-schemas"
      target="_self"
    >
      
    GraphQL
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/repo"
      target="_self"
    >
      Repo
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/readme"
      target="_self"
    >
      README
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/to-dos"
      target="_self"
    >
      To Dos
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/lines-of-code"
      target="_self"
    >
      
    Lines of Code
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/software-repositories"
      target="_self"
    >
      
    Software Repositories
  
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/software"
      target="_self"
    >
      Software
    </a>
     
    <a
      class="btn my-1 btn-secondary"
      href="/components/test-component-id-1/imports"
      target="_self"
    >
      Imports
    </a>
  </div>
   
  <div>
    <div>
      <transition-stub
        class="my-3"
        css="true"
        enteractiveclass=""
        enterclass=""
        entertoclass="show"
        leaveactiveclass=""
        leaveclass="show"
        leavetoclass=""
        name=""
      >
        <div
          aria-atomic="true"
          aria-live="polite"
          class="alert alert-dismissible alert-info"
          role="alert"
        >
          <button
            aria-label="Close"
            class="close"
            type="button"
          >
            ×
          </button>
          
      The dependencies on this page come from Zipkin. The visualisation is not
      out-of-the-box Zipkin functionality and is bespoke to Kronicle.
    
        </div>
      </transition-stub>
       
      <table
        class="table table-dark"
      >
        <thead>
          <tr>
            <th>
              Source Component
            </th>
             
            <th>
              Source Span
            </th>
             
            <th>
              Source Tags
            </th>
             
            <th>
              Target Component
            </th>
             
            <th>
              Target Span
            </th>
             
            <th>
              Target Tags
            </th>
             
            <th>
              Sample Size
            </th>
             
            <th>
              Sample Start
            </th>
             
            <th>
              Sample End
            </th>
             
            <th>
              Min
            </th>
             
            <th>
              p50
            </th>
             
            <th>
              p90
            </th>
             
            <th>
              p99
            </th>
             
            <th>
              p99.9
            </th>
             
            <th>
              Max
            </th>
          </tr>
        </thead>
         
        <tbody>
          <tr>
            <td
              class=""
            >
              <a
                href="/components/test-component-id-2"
              >
                Test Component Name 2
              </a>
            </td>
             
            <td>
              <span>
                test-component-2-span-id-2
              </span>
            </td>
             
            <td>
              <ul>
                <li>
                  
                test-component-2-tag-name-1: test-tag-value-1
              
                </li>
                <li>
                  
                test-component-2-tag-name-2: test-tag-value-2
              
                </li>
              </ul>
            </td>
             
            <td
              class="table-primary"
            >
              <a
                href="/components/test-component-id-1"
              >
                Test Component Name 1
              </a>
            </td>
             
            <td>
              
            test-component-1-span-id-2
          
            </td>
             
            <td>
              <ul>
                <li>
                  
                test-component-1-tag-name-1: test-tag-value-1
              
                </li>
                <li>
                  
                test-component-1-tag-name-2: test-tag-value-2
              
                </li>
              </ul>
            </td>
             
            <td>
              <span>
                2
              </span>
               spans
            </td>
             
            <td>
              <span>
                
              </span>
            </td>
             
            <td>
              <span>
                
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  2
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  2
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  2
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  2
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  2
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  2
                </span>
                ms
            
              </span>
            </td>
          </tr>
          <tr>
            <td
              class=""
            >
              <a
                href="/components/test-component-id-2"
              >
                Test Component Name 2
              </a>
            </td>
             
            <td>
              <span>
                test-component-2-span-id-1
              </span>
            </td>
             
            <td>
              <ul>
                <li>
                  
                test-component-2-tag-name-1: test-tag-value-1
              
                </li>
                <li>
                  
                test-component-2-tag-name-2: test-tag-value-2
              
                </li>
              </ul>
            </td>
             
            <td
              class="table-primary"
            >
              <a
                href="/components/test-component-id-1"
              >
                Test Component Name 1
              </a>
            </td>
             
            <td>
              
            test-component-1-span-id-1
          
            </td>
             
            <td>
              <ul>
                <li>
                  
                test-component-1-tag-name-1: test-tag-value-1
              
                </li>
                <li>
                  
                test-component-1-tag-name-2: test-tag-value-2
              
                </li>
              </ul>
            </td>
             
            <td>
              <span>
                1
              </span>
               spans
            </td>
             
            <td>
              <span>
                
              </span>
            </td>
             
            <td>
              <span>
                
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  1
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  1
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  1
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  1
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  1
                </span>
                ms
            
              </span>
            </td>
             
            <td>
              <span>
                <span>
                  1
                </span>
                ms
            
              </span>
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;
